[package]
name = "api"
version = "0.1.0"
authors = ["Max Meldrum <mmeldrum@kth.se>"]
edition = "2018"

[features]
default = ["kompact_api"]
kompact_api = ["kompact", "bytes"]

[dependencies]
protobuf = "2.0"

kompact = { git = "https://github.com/kompics/kompact", branch = "master", features = ["protobuf"], optional = true}
bytes = { version = "0.4", optional = true }

[build-dependencies]
protoc-rust = "2.0"
