[package]
name = "scout"
version = "0.1.0"
authors = ["Max Meldrum <mmeldrum@kth.se>"]
edition = "2018"

[dependencies]
kompact = { git = "https://github.com/kompics/kompact", branch = "master", features = ["protobuf"]}
bytes = "0.4"
slog = {version = "2.2"}
libc = "0.2"
lazy_static = "1.2.0"
iptables = "0.2"
caps = "0.2.0"
pnet = "0.21.0"



